# bootstrapping

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  bootstrap.json  bootstrap.py  common.cmake  macros.cmake  msvc.cmake
External.xcodeproj/: project.pbxproj
External.xcodeproj/xcshareddata/xcschemes/: external-blippar-release.xcscheme  external-blippar.xcscheme  external-layar-release.xcscheme  external-layar.xcscheme
android/: Android_duktape.mk  Android_external.mk  Android_faad2.mk  Android_fdk-aac.mk  Android_freetype.mk  Android_id3v2lib.mk  Android_libiconv.mk  Android_libjpeg-turbo.mk  Android_libjpeg.mk  Android_libmodplug.mk  Android_libogg.mk  Android_libpng.mk  Android_libtheora.mk  Android_libtremolo.mk  Android_libvorbis.mk  Android_libyuv.mk  Android_mp4v2.mk  Android_nestegg.mk  Android_openal-android.mk  Android_openal-soft.mk  Android_openh264.mk  Android_zlib.mk  Android_zxing.mk
cmake/AGAST/: CMakeLists.txt
cmake/FAST/: CMakeLists.txt
cmake/brotli/: CMakeLists.txt
cmake/bz2/: CMakeLists.txt
cmake/duktape/: CMakeLists.txt
cmake/faad2/: CMakeLists.txt
cmake/fdk-aac/: CMakeLists.txt
cmake/gif/: CMakeLists.txt
cmake/iconv/: CMakeLists.txt
cmake/id3v2lib/: CMakeLists.txt
cmake/jpeg/: CMakeLists.txt
cmake/jpeg-turbo/: CMakeLists.txt
cmake/liblinear/: CMakeLists.txt
cmake/libmodplug/: CMakeLists.txt
cmake/libogg/: CMakeLists.txt
cmake/libtheora/: CMakeLists.txt
cmake/libtremolo/: CMakeLists.txt
cmake/libvorbis/: CMakeLists.txt
cmake/libvpx/: CMakeLists.txt
cmake/libyuv/: CMakeLists.txt
cmake/mp4v2/: CMakeLists.txt
cmake/nestegg/: CMakeLists.txt
cmake/openh264/: CMakeLists.txt
cmake/png/: CMakeLists.txt
cmake/theoraplay/: CMakeLists.txt
cmake/z/: CMakeLists.txt
cmake/zopfli/: CMakeLists.txt
cmake/zxing/: CMakeLists.txt
ios/AGAST/AGAST-Prefix-gizlewkcngxqujcetodbhxdvsfde/: AGAST-Prefix.pch.pth.hash-criteria
ios/AGAST/AGAST.xcodeproj/: project.pbxproj
ios/AGAST/AGASTOSX.xcodeproj/: project.pbxproj
ios/External.xcworkspace/: contents.xcworkspacedata
ios/FAST/FAST.xcodeproj/: project.pbxproj
ios/FAST/FASTOSX.xcodeproj/: project.pbxproj
ios/freetype/freetype2.xcodeproj/: project.pbxproj
ios/giflib/giflib.xcodeproj/: project.pbxproj
ios/giflib/giflibosx.xcodeproj/: project.pbxproj
ios/id3v2lib/id3v2lib.xcodeproj/: project.pbxproj
ios/id3v2lib/id3v2lib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/libAAC/libAAC.xcodeproj/: project.pbxproj
ios/libAAC/libAAC.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/libMp4v2/libMp4v2.xcodeproj/: project.pbxproj
ios/libMp4v2/libMp4v2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/libOpenH264/libOpenH264.xcodeproj/: project.pbxproj
ios/libOpenH264/libOpenH264.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/libTheora/libTheora.xcodeproj/: project.pbxproj
ios/libTheora/libTheora.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/libTremelo/libTremelo/: libTremelo.h  libTremelo.m
ios/libTremelo/libTremelo.xcodeproj/: project.pbxproj
ios/libTremelo/libTremelo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/libTremelo/libTremeloTests/: Info.plist
ios/libVorbis/libVorbis.xcodeproj/: project.pbxproj
ios/libVorbis/libVorbis.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/libcurl/: build.sh  xcodebuild.sh
ios/libcurl/libcurl.xcodeproj/: project.pbxproj
ios/libcurl/libcurl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/libjpeg-turbo/: build.sh  xcodebuild.sh
ios/libjpeg-turbo/libjpeg-turbo.xcodeproj/: project.pbxproj
ios/libjpeg-turbo/libjpeg-turbo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/libjpeg/jpeg.xcodeproj/: project.pbxproj
ios/libjpeg/jpegosx.xcodeproj/: project.pbxproj
ios/libmodplug/libModPlug.xcodeproj/: project.pbxproj
ios/libogg/libOGG.xcodeproj/: project.pbxproj
ios/libogg/libogg.xcodeproj/: project.pbxproj
ios/libogg/libogg.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/libpng/png.xcodeproj/: project.pbxproj
ios/libpng/pngosx.xcodeproj/: project.pbxproj
ios/libtremolo/libTremolo.xcodeproj/: project.pbxproj
ios/libvorbis/libVorbis.xcodeproj/: project.pbxproj
ios/libvpx/libvpx.xcodeproj/: project.pbxproj
ios/libvpx/libvpx.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/nestegg/nestegg.xcodeproj/: project.pbxproj
ios/nestegg/nestegg.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/zxing/zxing.xcodeproj/: project.pbxproj
patches/: Windows.patch  agast_85aacb98672be61dc4ca65998fc91fdd3d703b08.patch  catch_fdc42d0af47f58fa13a42b685bbeaf55a8347673.patch  curlbuild.h  eigen_52ce287938b94745415f791f947fb243ffb60c12.patch  eigen_b9210aebb4dd4ba8bea7e5ba9dc4242a380be9cc.patch  eigen_ce5a455b34c0a0ac3545a1497cb4a16c38ed90e8.patch  fast_cb380d37732c5b868a4da01f874dcbaf5a6994ae.patch  freetype_0963526435b39080e7fc45610aee3b3e2e2383b0.patch  giflib.patch  libcurl.py  libcurl_e2ae32ff5f3ab6f0819590f61f248f17df12987f.patch  libiconv_be7d67e50d72ff067b2c0291311bc283add36965.patch  libjpeg-turbo.patch  libjpeg-turbo_arm64-v8a_clang_fix.patch  libjpeg-turbo_d8da49effe6460d55239c4c009c57f42d8e4a494.patch  libjpeg.py  libjpeg.sh  liblinear_993963e43c6162c1d016ce77e7205ac24c1548de.patch  libmodplug.patch  libmp4v2.py  libnestegg.py  libogg_df7f3977bbeda67306bc2a427257dd7375319d7d.patch  libopenal-soft.py  libpng.py  libpng.sh  libtremolo_b12e3f31153b8ff82fcc8475cc0da9817abb28d6.patch  libvpx.py  maxsum.patch  mp4v2_config.h  openal-soft-android.patch  openal-soft-config.h  redsvd-h_81a2da8222375fefaef6f2150e076bc0538d6c13.patch  tokenizer.patch  zxing.patch
patches/libcurl/: Android.mk  curl_config.h
patches/libressl/: Android.mk  Android_crypto.mk  Android_ssl.mk  getentropy_android.c  libressl.py  reallocarray.c
patches/libvpx/: readme.txt  vpx_config.h  vpx_version.h
windows/libmodplug/: CMakeLists.txt
windows/libogg/: CMakeLists.txt
windows/libtremolo/: CMakeLists.txt
windows/libvorbis/: CMakeLists.txt
(+2 files in other folders)
