cmake_minimum_required(VERSION 2.8)

project(external)

add_subdirectory(./cmake/z EXCLUDE_FROM_ALL)
add_subdirectory(./cmake/bz2 EXCLUDE_FROM_ALL)
add_subdirectory(./cmake/gif EXCLUDE_FROM_ALL)
add_subdirectory(./cmake/png EXCLUDE_FROM_ALL)
add_subdirectory(./cmake/jpeg EXCLUDE_FROM_ALL)
#add_subdirectory(./cmake/jpeg-turbo EXCLUDE_FROM_ALL)
add_subdirectory(./cmake/zxing EXCLUDE_FROM_ALL)
add_subdirectory(./cmake/AGAST EXCLUDE_FROM_ALL)
add_subdirectory(./cmake/FAST EXCLUDE_FROM_ALL)
add_subdirectory(./cmake/iconv EXCLUDE_FROM_ALL)
add_subdirectory(./cmake/brotli EXCLUDE_FROM_ALL)
add_subdirectory(./cmake/zopfli EXCLUDE_FROM_ALL)

if (ANDROID_MK)
    android_mk_create()
    android_mk_static_library(gif CFLAGS "\$(EXTERNAL_CFLAGS)")
    android_mk_static_library(png CFLAGS "\$(EXTERNAL_CFLAGS)")
    android_mk_static_library(jpeg CFLAGS "\$(EXTERNAL_CFLAGS)")
    android_mk_static_library(zxing CFLAGS "\$(EXTERNAL_CFLAGS)" SHARED_LIBRARIES iconv)
    android_mk_static_library(AGAST CFLAGS "\$(EXTERNAL_CFLAGS)")
    android_mk_static_library(FAST CFLAGS "\$(EXTERNAL_CFLAGS)")
    android_mk_shared_library(iconv CFLAGS "\$(EXTERNAL_CFLAGS) -DLIBDIR")
endif()
