cmake_minimum_required(VERSION 2.8)

project("mp4v2")

if(MSVC)
	set(CMAKE_C_FLAGS "/Ox /EHsc /MT /Zp16 /GS /Qpar /MP /wd4244")
	set(CMAKE_CXX_FLAGS "/Ox /EHsc /MT /Zp16 /GS /Qpar /MP /wd4244")
endif(MSVC)

add_definitions(
	-DMP4V2_USE_STATIC_LIB
)

include_directories(
	.
	../../src/mp4v2
	../../src/mp4v2/include
	../../src/mp4v2/libplatform
)

set(SRC_FILES
	../../src/mp4v2/src/3gp.cpp
	../../src/mp4v2/src/atom_ac3.cpp
	../../src/mp4v2/src/atom_amr.cpp
	../../src/mp4v2/src/atom_avc1.cpp
	../../src/mp4v2/src/atom_avcC.cpp
	../../src/mp4v2/src/atom_chpl.cpp
	../../src/mp4v2/src/atom_colr.cpp
	../../src/mp4v2/src/atom_d263.cpp
	../../src/mp4v2/src/atom_dac3.cpp
	../../src/mp4v2/src/atom_damr.cpp
	../../src/mp4v2/src/atom_dref.cpp
	../../src/mp4v2/src/atom_elst.cpp
	../../src/mp4v2/src/atom_enca.cpp
	../../src/mp4v2/src/atom_encv.cpp
	../../src/mp4v2/src/atom_free.cpp
	../../src/mp4v2/src/atom_ftab.cpp
	../../src/mp4v2/src/atom_ftyp.cpp
	../../src/mp4v2/src/atom_gmin.cpp
	../../src/mp4v2/src/atom_hdlr.cpp
	../../src/mp4v2/src/atom_hinf.cpp
	../../src/mp4v2/src/atom_hnti.cpp
	../../src/mp4v2/src/atom_href.cpp
	../../src/mp4v2/src/atom_mdat.cpp
	../../src/mp4v2/src/atom_mdhd.cpp
	../../src/mp4v2/src/atom_meta.cpp
	../../src/mp4v2/src/atom_mp4s.cpp
	../../src/mp4v2/src/atom_mp4v.cpp
	../../src/mp4v2/src/atom_mvhd.cpp
	../../src/mp4v2/src/atom_nmhd.cpp
	../../src/mp4v2/src/atom_ohdr.cpp
	../../src/mp4v2/src/atom_pasp.cpp
	../../src/mp4v2/src/atom_root.cpp
	../../src/mp4v2/src/atom_rtp.cpp
	../../src/mp4v2/src/atom_s263.cpp
	../../src/mp4v2/src/atom_sdp.cpp
	../../src/mp4v2/src/atom_sdtp.cpp
	../../src/mp4v2/src/atom_smi.cpp
	../../src/mp4v2/src/atom_sound.cpp
	../../src/mp4v2/src/atom_standard.cpp
	../../src/mp4v2/src/atom_stbl.cpp
	../../src/mp4v2/src/atom_stdp.cpp
	../../src/mp4v2/src/atom_stsc.cpp
	../../src/mp4v2/src/atom_stsd.cpp
	../../src/mp4v2/src/atom_stsz.cpp
	../../src/mp4v2/src/atom_stz2.cpp
	../../src/mp4v2/src/atom_text.cpp
	../../src/mp4v2/src/atom_tfhd.cpp
	../../src/mp4v2/src/atom_tkhd.cpp
	../../src/mp4v2/src/atom_treftype.cpp
	../../src/mp4v2/src/atom_trun.cpp
	../../src/mp4v2/src/atom_tx3g.cpp
	../../src/mp4v2/src/atom_udta.cpp
	../../src/mp4v2/src/atom_url.cpp
	../../src/mp4v2/src/atom_urn.cpp
	../../src/mp4v2/src/atom_uuid.cpp
	../../src/mp4v2/src/atom_video.cpp
	../../src/mp4v2/src/atom_vmhd.cpp
	../../src/mp4v2/src/cmeta.cpp
	../../src/mp4v2/src/descriptors.cpp
	../../src/mp4v2/src/exception.cpp
	../../src/mp4v2/src/isma.cpp
	../../src/mp4v2/src/log.cpp
	../../src/mp4v2/src/mp4.cpp
	../../src/mp4v2/src/mp4atom.cpp
	../../src/mp4v2/src/mp4container.cpp
	../../src/mp4v2/src/mp4descriptor.cpp
	../../src/mp4v2/src/mp4file.cpp
	../../src/mp4v2/src/mp4file_io.cpp
	../../src/mp4v2/src/mp4info.cpp
	../../src/mp4v2/src/mp4property.cpp
	../../src/mp4v2/src/mp4track.cpp
	../../src/mp4v2/src/mp4util.cpp
	../../src/mp4v2/src/ocidescriptors.cpp
	../../src/mp4v2/src/odcommands.cpp
	../../src/mp4v2/src/qosqualifiers.cpp
	../../src/mp4v2/src/rtphint.cpp
	../../src/mp4v2/src/text.cpp
	../../src/mp4v2/src/bmff/typebmff.cpp
	../../src/mp4v2/src/itmf/CoverArtBox.cpp
	../../src/mp4v2/src/itmf/generic.cpp
	../../src/mp4v2/src/itmf/Tags.cpp
	../../src/mp4v2/src/itmf/type.cpp
	../../src/mp4v2/src/qtff/coding.cpp
	../../src/mp4v2/src/qtff/ColorParameterBox.cpp
	../../src/mp4v2/src/qtff/PictureAspectRatioBox.cpp
	../../src/mp4v2/libutil/crc.cpp
	../../src/mp4v2/libutil/Database.cpp
	../../src/mp4v2/libutil/other.cpp
	../../src/mp4v2/libutil/Timecode.cpp
	../../src/mp4v2/libutil/TrackModifier.cpp
	../../src/mp4v2/libutil/Utility.cpp
	../../src/mp4v2/libplatform/io/File.cpp
	../../src/mp4v2/libplatform/io/FileSystem.cpp
	../../src/mp4v2/libplatform/prog/option.cpp
	../../src/mp4v2/libplatform/sys/error.cpp
	../../src/mp4v2/libplatform/time/time.cpp
)

if(MSVC)
	set(SRC_FILES
		${SRC_FILES}
		../../src/mp4v2/libplatform/platform_win32.cpp
		../../src/mp4v2/libplatform/io/File_win32.cpp
		../../src/mp4v2/libplatform/io/FileSystem_win32.cpp
		../../src/mp4v2/libplatform/number/random_win32.cpp
		../../src/mp4v2/libplatform/process/process_win32.cpp
		../../src/mp4v2/libplatform/time/time_win32.cpp
	)
else(MSVC)
	set(SRC_FILES
		${SRC_FILES}
		../../src/mp4v2/libplatform/io/File_posix.cpp
		../../src/mp4v2/libplatform/io/FileSystem_posix.cpp
		../../src/mp4v2/libplatform/number/random_posix.cpp
		../../src/mp4v2/libplatform/process/process_posix.cpp
		../../src/mp4v2/libplatform/time/time_posix.cpp
	)
endif(MSVC)

add_library(mp4v2 ${SRC_FILES}
	)
